@@ -5,7 +5,13 @@ use Config;
 
 all_from 'lib/Devel/InterpreterSize.pm';
 license 'apache2';
+
+resources(
+    repository => "git://github.com/bobtfish/Devel-InterpreterSize.git",
+);
+
 requires 'Class::Load';
+
 if ($Config{'osname'} =~ /(?:darwin|bsd|aix)/i) {
     requires 'BSD::Resource';
 }
