@@ -1,3 +1,5 @@
+  - Added git repository URL
+
 0.01
   - Initial version
 
